# hospital-price-transparency-analytics

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  Makefile  README.md  pyproject.toml
.cursor/rules/: dbt-duckdb-modeling.mdc  docs-maintenance.mdc  hpt-domain-rules.mdc  project-context.mdc  python-pipeline-style.mdc
.github/workflows/: ci.yml
adhoc_scripts/: run_mrf_sniffer_on_raw.py
adhoc_scripts/adhoc/: adhoc.py  adhoc.sql  check_remote_json_size.py  explore_json.py  profile_paths.py
apps/evidence/: .gitignore  README.md  evidence.config.yaml  package-lock.json  package.json
docs/: README.md  bronze_layer.md  cleanup.md  configuration.md  header_parsing.md
docs/ai/: README.md  context.md  prompting-guide.md
docs/architecture/: bi-layer.md  bronze-schema.md  external-data-enrichment.md  gold-schema.md  medallion-layers.md  overview.md  pipeline-overview.md  silver-core.md  silver-schema.md  storage-layout.md
docs/decisions/: 0001-use-polars-and-duckdb.md  0002-use-fsspec-storage-abstraction.md  0003-bronze-partitioning-strategy.md  0004-separate-python-parsing-from-dbt-modeling.md  0005-split-silver-base-and-silver-core.md  0006-model-all-snapshots-in-silver.md  0007-unify-json-and-csv-in-silver-base.md  0008-use-registry-backed-hospital-identity.md  0009-normalize-payers-as-identity-plus-context.md  0010-monetary-precision.md  0011-dbt-validation-layer.md  0012-scope-snapshot-grained-consumers-not-staging.md  0012-validate-trimmed-source-literals.md  0013-normalize-billing-codes-as-enrichment.md  0014-derive-service-item-identity-deterministically.md  README.md  (+7 more)
notes/: list_of_hospitals.md  set_of_questions.md
registry/: hospitals.yaml
scripts/: build_e2e_fixtures.py  build_multi_snapshot_corpus.py  build_public_site.sh  check_evidence_readiness.py  deploy_site_manual.sh  ec2_bootstrap.sh  export_evidence_artifact.py  export_hospitals_seed.py  vendor_cms_fixtures.py
tests/: conftest.py  test_clear_snapshot.py  test_config.py  test_download.py  test_hospital_seed_export.py  test_ingest_logging.py  test_registry.py  test_snapshot.py  test_storage.py
transform/: dbt_project.yml  profiles.yml  selectors.yml
(+449 files in other folders)
