[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hpt.reference" = ["sources.yml"]

[project]
name = "hospital-price-transparency"
version = "0.1.0"
description = "Ingest, normalize, and analyze CMS hospital machine-readable price transparency (MRF) data."
requires-python = ">=3.11"
dependencies = [
  "polars>=1.0",
  "ijson>=3.2",
  "pyyaml>=6.0",
  "typer>=0.24",
  "pyarrow>=15.0",
  "httpx>=0.27",
  "fsspec>=2024.2",
  "pydantic>=2.0",
  "dbt-core>=1.11",
  "dbt-duckdb>=1.1",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-httpx>=0.30",
  "ruff>=0.6",
  "python-dotenv>=1.0",
]
warehouse = [
  "duckdb>=1.5.2",
  "psycopg[binary]>=3.1",
]
orchestration = [
  "apache-airflow>=2.8",
]

[project.scripts]
hpt = "hpt.cli:cli"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "e2e: offline end-to-end fixture tests that exercise ingest, Bronze, and dbt",
]
